# promtuz-android

app/: build.gradle.kts
app/src/androidTest/java/com/promtuz/chat/: SecurityTest.kt
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/promtuz/chat/: MainActivity.kt
app/src/main/java/com/promtuz/chat/data/remote/: QuicClient.kt
app/src/main/java/com/promtuz/chat/di/: AppModule.kt  RepoModule.kt  ViewModels.kt
app/src/main/java/com/promtuz/chat/native/: Core.kt
app/src/main/java/com/promtuz/chat/navigation/: AppNavigation.kt  HomeNavigation.kt  Routes.kt  Utils.kt
app/src/main/java/com/promtuz/chat/security/: KeyManager.kt  SecretKey.kt  SigningKey.kt  StaticSecret.kt
app/src/main/java/com/promtuz/core/: API.kt  Core.kt  Crypto.kt
app/src/main/java/com/promtuz/core/events/: InternalEvent.kt
app/src/main/res/raw/: resolver_seeds.json  resolver_seeds.txt  root_ca.pem
app/src/main/res/values/: connections.xml  strings.xml
app/src/main/rust/: Cargo.toml  build
app/src/main/rust/base/src/: lib.rs
app/src/main/rust/base/src/api/: connection.rs  misc.rs  mod.rs
app/src/main/rust/base/src/data/: relay.rs
app/src/main/rust/base/src/events/: callback.rs  connection.rs  mod.rs
app/src/main/rust/base/src/quic/: server.rs
app/src/main/rust/core/: Cargo.toml
app/src/main/rust/core/src/: lib.rs
app/src/main/rust/core/src/crypto/: chacha20.rs  dh.rs  x25519.rs
app/src/main/rust/core/src/data/: mod.rs  relay.rs
app/src/main/rust/core/src/events/: connection.rs  poll.rs
app/src/main/rust/core/src/quic/: dialer.rs  server.rs
app/src/main/rust/core/src/utils/: mod.rs  ujni.rs
app/src/main/rust/macros/: Cargo.toml
app/src/test/java/com/promtuz/chat/: CBORTest.kt  HandshakeTest.kt  IdentityTest.kt
gradle/: libs.versions.toml
(+45 files in other folders)
